--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           >
         </li>
         <li>
-          <a href="http://127.0.0.1:5500/index2.html">Suas Musicas</a>
+          <a href="./index2.html">Suas Musicas</a>
         </li>
       </ul>
       <div id="social-links">
